Update meta descriptions

--- a/src/content/graphos/metrics/notifications/build-status-notification.mdx
+++ b/src/content/graphos/metrics/notifications/build-status-notification.mdx
@@ -1,7 +1,7 @@
 ---
 title: Build status notifications
 subtitle: Receive alerts when GraphOS attempts to compose a supergraph schema
-description: Configure Apollo GraphOS to notify your team via webhook about schema build attempts in your federated graph.
+description: Configure Apollo GraphOS to notify your team via webhook about schema build attempts in your federated GraphQL API.
 ---
 
 <PremiumFeature linkWithAnchor="https://www.apollographql.com/pricing#integrations" />
