--- a/src/content/graphos/metrics/notifications/index.mdx
+++ b/src/content/graphos/metrics/notifications/index.mdx
@@ -1,7 +1,7 @@
 ---
 title: GraphOS notifications
 subtitle: Learn about supported notification types and channels
-description: Set up notifications for your GraphQL graph's performance, schema changes, and more. Stay updated and address issues effectively using custom alerts.
+description: Set up notifications for your GraphQL API's performance, schema changes, and more. Stay updated and address issues effectively using custom alerts.
 ---
 
 GraphOS can notify your team about changes to your graph and its performance.
