--- a/src/content/graphos/metrics/notifications/performance-alerts.mdx
+++ b/src/content/graphos/metrics/notifications/performance-alerts.mdx
@@ -1,7 +1,7 @@
 ---
 title: Performance alerts from GraphOS
 subtitle: Receive notifications when metrics exceed defined thresholds
-description: Configure alerts to receive notifications in Slack or PagerDuty instance when specific request and error metrics surpass defined thresholds.
+description: Configure alerts to receive notifications in Slack or PagerDuty instance when specific request and error metrics for your GraphQL API surpass defined thresholds.
 ---
 
 <Note>
