--- a/src/content/graphos/metrics/notifications/schema-proposal-integration.mdx
+++ b/src/content/graphos/metrics/notifications/schema-proposal-integration.mdx
@@ -34,7 +34,7 @@ GraphOS sends webhook notifications to this endpoint as `POST` requests.
 Notification details are provided as JSON in the request body, as described in the next section.
 
 1. Specify an **Endpoint name**. This name must be unique among all your graph's notification channels, including Slack channels.
-2. In the **Webhook URL** field, provide the URL of your HTTP(S) endpoint.
+2. In the **Webhook URL** input, provide the URL of your HTTP(S) endpoint.
 3. Optionally, enter a **Secret Token**, which will be sent as an `x-apollo-signature` header in the notification payload.
 4. Click **Next**.
 
