Updated performance pillar description

--- a/src/content/graphos/enterprise/supergraph-architecture-framework/performance.mdx
+++ b/src/content/graphos/enterprise/supergraph-architecture-framework/performance.mdx
@@ -3,7 +3,7 @@ title: Performance
 description: Build a high performing graph by proactively monitoring and improving it over time
 ---
 
-The runtime performance and efficiency of your digital ecosystem can either make or break your business. An under performing application stack is one that offers a poor user experience or one that utilizes its resources inefficiently. A supergraph architecture is a new layer in this stack, one which presents both new opportunities to improve the real and perceived performance of existing systems, and new performance bottlenecks if we aren't careful. The Supergraph Architecture Framework performance pillar focuses on addressing what is in place to enable developers to address the common bottlenecks that they'll encounter in a supergraph architecture. The north star of performance for a supergraph platform is not only to deliver a great user experience, but also to provide ways for its developers and users to proactively look for opportunities to improve performance or efficiency, with the documentation and tools they'll need to ship and measure those changes effectively.
+The **Performance** pillar focuses on improving the runtime performance and efficiency of your supergraph. A well architected supergraph platform not only delivers a great end-user experience, but also provides ways for its developers and contributors to proactively look for opportunities to improve both real and perceived performance, with the documentation and tools they'll need to ship and measure those changes effectively.
 
 ## Principles
 
