--- a/src/content/graphos/metrics/notifications/schema-proposal-integration.mdx
+++ b/src/content/graphos/metrics/notifications/schema-proposal-integration.mdx
@@ -11,7 +11,7 @@ Schema proposals are only available with a [GraphOS Enterprise plan](https://www
 </EnterpriseFeature>
 
 Configure GraphOS to send notifications to a webhook whenever schema proposals are created or revised or if their status changes.
-These webhooks are useful for automating workflows, like opening a draft pull request in your codebase whenever a proposal's status changes to **Approved**.
+These webhooks are useful for automating workflows. For example, your organization may want to open a draft pull request in your codebase whenever a proposal's status changes to **Approved**.
 
 ## Setup
 
@@ -42,7 +42,7 @@ Notification details are provided as JSON in the request body, as described in t
 
 Custom webhook notification details are provided as a JSON object in the request body.
 To avoid including sensitive information, payloads contain IDs—for example, proposal ID and revision ID—rather than objects containing details about the proposal or revision.
-You can use the [Platform API](/graphos/platform-api/) to fetch full objects using the IDs in the webhook payload
+You can use the [Platform API](/graphos/platform-api/) to fetch full objects using the IDs in the webhook payload.
 
 The JSON object conforms to the structure of the `ResponseShape` interface:
 
@@ -89,7 +89,7 @@ interface ResponseShape {
 </td>
 <td>
 
-The schema proposal event, either `APOLLO_PROPOSAL_CREATED`, `APOLLO_PROPOSAL_STATUS_CHANGE`, or `PROPOSAL_REVISION_SAVED`
+The schema proposal event, either `APOLLO_PROPOSAL_CREATED`, `PROPOSAL_REVISION_SAVED`, or `APOLLO_PROPOSAL_STATUS_CHANGE`
 
 </td>
 </tr>
@@ -128,12 +128,12 @@ A unique proposal ID
 </td>
 <td>
 
-- For `APOLLO_PROPOSAL_STATUS_CHANGE` events, the current `status` and `previousStatus` of the proposal.
-See [proposal statuses](../../delivery/schema-proposals#proposal-statuses) for more information.
+- This field isn't present for `APOLLO_PROPOSAL_CREATED` events.
 
 - For `PROPOSAL_REVISION_SAVED` events, the unique `revisionID` of the saved revision.
 
-- This field isn't present for `APOLLO_PROPOSAL_CREATED` events.
+- For `APOLLO_PROPOSAL_STATUS_CHANGE` events, the current `status` and `previousStatus` of the proposal.
+See [proposal statuses](../../delivery/schema-proposals#proposal-statuses) for more information.
 
 </td>
 </tr>
