--- a/src/content/graphos/enterprise/supergraph-architecture-framework/developer-experience.mdx
+++ b/src/content/graphos/enterprise/supergraph-architecture-framework/developer-experience.mdx
@@ -1,28 +1,53 @@
 ---
 title: Developer Experience
-description: Enable your graph consumers and subgraph developers to leverage and evolve the graph
+description: Enable subgraph and client developers to evolve and leverage the graph
 ---
 
-The **Developer Experience** pillar focuses on enhancing the developer experience with the supergraph, emphasizing streamlined workflows, effective schema management, and continuous innovation. It aims to improve productivity and satisfaction through targeted principles that foster collaboration, understand the developer journey, and encourage a cycle of feedback and agile improvements. This pillar sets the stage for a user-friendly and cutting-edge platform, ensuring developers can contribute efficiently and effectively.
+The **Developer Experience** pillar focuses on enhancing developer productivity and satisfaction.
+It promotes collaboration via streamlined workflows and effective schema management.
+This pillar sets the stage for a platform that's both user-friendly and cutting-edge—ensuring developers can contribute efficiently.
 
 ## Principles
 
 ### Keep teams up to date with schema changes
 
-Automating notifications can greatly streamline collaboration across the stack. By setting up automated notifications for relevant teams and interested parties, everyone can stay informed about schema changes without needing to rely on manual updates or communication. This can help reduce the risk of errors and improve overall efficiency, as teams can immediately begin adapting their workflows and processes to accommodate the changes. Additionally, automated notifications can help ensure that all stakeholders are aware of the changes and can provide feedback or raise concerns as needed, helping to facilitate a more collaborative and transparent development process.
+Both graph developers and consumers need to stay up-to-date with your graph's schema.
+Automating notifications streamlines communication, ensuring everyone stays informed without relying on manual updates.
+This reduces the risk of errors and improves efficiency.
+It allows teams across the stack to adapt their workflows to accommodate the changes.
+
+Additionally, automated notifications facilitate stakeholder awareness.
+This means stakeholders can provide feedback or raise concerns, fostering a more collaborative and transparent development process.
 
 ### Enable subgraph developers
 
-Reducing time-to-market for supergraph contributors is important for increasing developer efficiency. To achieve this, it is crucial to provide clear documentation on workflows for common failure scenarios, such as publish failures or failed schema checks. Additionally, subgraph schemas should be validated during development to catch errors early on, and errors should be surfaced in development to enable quick debugging. Providing a standard continuous integration and delivery system can also streamline the deployment process and reduce the time required to get a supergraph up and running. By implementing these best practices, supergraph contributors can be empowered to iterate and innovate more quickly.
+To enhance overall developer efficiency, it's vital to reduce time-to-market for supergraph contributors.
+These best practices can help:
+
+- Offer clear documentation outlining workflows for common failure scenarios like publish failures or failed schema checks.
+- Validate subgraph schemas during development to catch errors early, and ensure errors are surfaced for quick debugging.
+- Implement a standard continuous integration and delivery system to streamline deployment, cutting down the time needed to launch a supergraph.
+
+By following these practices, supergraph contributors can iterate and innovate faster.
 
 ### Enable client developers
 
-Improving development velocity for client application developers is critical for maintaining a competitive edge in the industry. To achieve this, it is important to provide developers with easy access to accurate documentation, testing best practices, and uniform tooling for code generation.
+Improving client application development velocity is key to staying competitive.
+To achieve this, client developers need access to three things: accurate documentation, testing best practices, and uniform tooling for code generation.
 
 ### Use the supergraph to improve distributed systems
 
-Adopting best practices for microservices and distributed systems is crucial to the success of any organization using Apollo Federation and the supergraph. By documenting a framework for splitting responsibilities across subgraphs and entity resolvers, as well as leveraging federation appropriately for cross-domain orchestration, developers can improve the overall efficiency of their system. It is important to prioritize developer efficiency when working with microservices and distributed systems, and following best practices can help achieve that goal.
+It's essential for any organization using GraphQL Federation to embrace best practices for microservices and distributed systems.
+These best practices include:
 
-### Onboard consumers and contributors
+- Documenting a framework for splitting responsibilities across subgraphs and entity resolvers
+- Using federation appropriately for cross-domain orchestration
 
-Providing effective onboarding for new developers is essential for maximizing developer efficiency and productivity. In the context of supergraph development, this is particularly important given the complexity of the technology involved. By investing in onboarding processes and tools, organizations can help ensure that new developers are able to quickly get up to speed with supergraph development, reducing the time and resources required to bring new team members up to speed. This can ultimately lead to faster development cycles, more efficient use of resources, and the ability to more rapidly iterate on and improve supergraph-based applications.
+By following these practices, developers can improve the efficiency of their systems.
+
+### Onboard graph consumers and contributors
+
+Effective onboarding for new developers is foundational for maximizing developer efficiency and productivity.
+This is crucial in supergraph development, given the complexity of the technology involved.
+By investing in onboarding processes and tools, organizations can expedite the learning curve for new developers.
+This ultimately leads to faster development cycles and more efficient use of resources.
