--- a/src/content/graphos/delivery/schema-linter.mdx
+++ b/src/content/graphos/delivery/schema-linter.mdx
@@ -30,7 +30,7 @@ The predefined collection includes [schema composition](/federation/federated-ty
 To navigate to your linter configuration:
 
 1. In [GraphOS Studio](https://studio.apollographql.com/?referrer=docs-content), go to your graph's **Checks** page.
-2. Click **Configuration** in the upper right to open the checks configuration page.
+2. Click **Linter configuration** in the upper right to open the checks configuration page.
 3. From the checks configuration page, open the **Linter** section.
 
 This page organizes linter options into the following categories:
