--- a/src/content/graphos/enterprise/supergraph-architecture-framework/developer-experience.mdx
+++ b/src/content/graphos/enterprise/supergraph-architecture-framework/developer-experience.mdx
@@ -1,27 +1,28 @@
 ---
 title: Developer Experience
-description: Enable subgraph and client developers to evolve and leverage the graph
+subtitle: Empower graph contributors and consumers
+description: Enhance developer productivity with GraphQL Federation via streamlined workflows, effective schema management, and comprehensive onboarding.
 ---
 
 The **Developer Experience** pillar focuses on enhancing developer productivity and satisfaction.
-It promotes collaboration via streamlined workflows and effective schema management.
-This pillar sets the stage for a platform that's both user-friendly and cutting-edge—ensuring developers can contribute efficiently.
+It promotes collaboration via effective schema management and streamlined workflows.
+This pillar sets the stage for a platform that's both developer-friendly and cutting-edge, ensuring all developers can contribute efficiently.
 
 ## Principles
 
 ### Keep teams up to date with schema changes
 
-Both graph developers and consumers need to stay up-to-date with your graph's schema.
-Automating notifications streamlines communication, ensuring everyone stays informed without relying on manual updates.
-This reduces the risk of errors and improves efficiency.
+Your GraphQL schema acts as a contract between graph developers and consumers, so it's key that everyone stays up-to-date with changes.
+Automating schema change notifications streamlines communication by not relying on manual updates.
+This reduces the risk of errors and improves developer efficiency.
 It allows teams across the stack to adapt their workflows to accommodate the changes.
 
-Additionally, automated notifications facilitate stakeholder awareness.
+Automated notifications also facilitate stakeholder awareness.
 This means stakeholders can provide feedback or raise concerns, fostering a more collaborative and transparent development process.
 
 ### Enable subgraph developers
 
-To enhance overall developer efficiency, it's vital to reduce time-to-market for supergraph contributors.
+To enhance overall developer efficiency, it's vital to reduce time-to-market for subgraph developers.
 These best practices can help:
 
 - Offer clear documentation outlining workflows for common failure scenarios like publish failures or failed schema checks.
@@ -41,13 +42,13 @@ It's essential for any organization using GraphQL Federation to embrace best pra
 These best practices include:
 
 - Documenting a framework for splitting responsibilities across subgraphs and entity resolvers
-- Using federation appropriately for cross-domain orchestration
+- Using GraphQL Federation appropriately for cross-domain orchestration
 
 By following these practices, developers can improve the efficiency of their systems.
 
 ### Onboard graph consumers and contributors
 
-Effective onboarding for new developers is foundational for maximizing developer efficiency and productivity.
-This is crucial in supergraph development, given the complexity of the technology involved.
+Effective onboarding for new developers is foundational for maximizing developer efficacy.
+Onboarding is particularly important in supergraph development, given the complexity of the technology involved.
 By investing in onboarding processes and tools, organizations can expedite the learning curve for new developers.
 This ultimately leads to faster development cycles and more efficient use of resources.
