Operational excellence copyedits

--- a/src/content/graphos/enterprise/supergraph-architecture-framework/operational-excellence.mdx
+++ b/src/content/graphos/enterprise/supergraph-architecture-framework/operational-excellence.mdx
@@ -1,28 +1,50 @@
 ---
 title: Operational Excellence
-description: Efficiently operate, monitor, and manage your supergraph
+subtitle: Efficiently operate, monitor, and manage your supergraph
+description: Learn best practices for GraphQL schema design, organization structure, standards enforcement, and supergraph scaling and health maintenace.
 ---
 
-The **Operational Excellence** pillar focuses on how you best enable your subgraph teams and stewardship teams to build a better supergraph. The best practices covered under this pillar outline how to enable you to build an effective governance program and help organizations build GraphQL schemas in an effective way, helping build trust in the graph from both clients and subgraph authors alike.
+The **Operational Excellence** pillar focuses on subgraph and stewardship team enablement.
+This pillar's best practices outline how to effectively build and manage GraphQL schemas.
+They also cover how create governance programs.
+These practices and programs build trust in the graph for both subgraph and client developers alike.
 
 ## Principles
 
 ### Design an effective GraphQL schema
 
-GraphQL schemas are the cornerstone of GraphQL—it enables both frontend and backend teams to understand the data that is available to be sent, and how clients request the data they care about. It’s important that schemas are built well to avoid developer frustration, so the best practices here cover how to best design your schemas.
+GraphQL schemas are the cornerstone of GraphQL.
+Schemas enable both front- and backend teams to understand the available data.
+They also describe how clients request the data they care about.
+It's important that schemas are well-designed to avoid developer frustration.
+The best practices in this principle cover schema design best practices.
 
 ### Structure the organization to support best practices
 
-As organizations grow their federated graph, scaling issues may arise as a result of the multitude of teams contributing to it. Whether it’s related to schema design evolution or graph ownership, these issues create friction and affect developer velocity negatively. The best practices in this principle cover how to enable graph stewardship teams to be effective, and how organizations should think about the supergraph as a product, rather than a shared service.
+As organizations grow their federated graph, scaling issues may arise.
+This can happen due to the multitude of teams contributing to the graph.
+Whether issues stem from schema design evolution or graph ownership, they can create friction and hamper developer velocity.
+
+The best practices in this principle cover how to enable graph stewardship teams and make them effective.
+They also explain how to think about the supergraph as a product rather than a shared service.
 
 ### Scale the supergraph
 
-Federating a GraphQL service is a relatively new concept for many organizations, and it’s important to have teams understand how to implement and scale effectively. The best practices in this principle help organizations understand how supergraphs should be built and maintained to ensure it is a successful tool for building new experiences quickly.
+GraphQL Federation is a new concept for many organizations.
+It's important for teams to deeply understand implementation and scaling.
+The best practices in this principle help organizations understand how to build and maintain the supergraph.
+This ensures it's a successful tool for building new experiences quickly.
 
 ### Enforce subgraph standards and best practices
 
-Just as stewardship is important, helping enforce standards is critical to ensure that the resulting supergraph schema is consistent for consuming applications. The best practices in this principle demonstrate how to effectively enforce standards to assist with the creation of a consistent, usable, and standardized supergraph schema.
+Enforcing standards is a critical part of stewardship.
+Standards ensure that the supergraph schema is consistent for graph consumers.
+The best practices in this principle show how to effectively enforce standards—ensuring a consistent and user-friendly supergraph schema.
 
 ### Improve supergraph health over time
 
-A supergraph is not a singular creation time, and instead, as with GraphQL as a whole, is intended to be grown over time. Subgraph teams should be thinking about not only how they build today, but how they may need to build in the future and how that affects consuming teams. The best practices covered under this principle help teams build effective processes and tools to understand the health of their supergraph.
+The creation of a supergraph isn't confined to a single instance in time.
+Instead, as with GraphQL as a whole, it's intended to evolve.
+Subgraph teams should think about how they build today and how they may need to build in the future.
+They should also keep in mind how future changes affect graph consumers.
+This principle's best practices help teams build effective processes and tools to understand their supergraph's health.
